crates/plotnik-tests/tests/04-emit/bytecode/binding/unknown_field_no_suggestion.txt
Q = (function_declaration
  xyzzy: (identifier) @name
) @fn
------------------ DIAGNOSTICS -------------------
error: `xyzzy` is not a valid grammar field
 --> query.ptk:2:3
  |
2 |   xyzzy: (identifier) @name
  |   ^^^^^
